perf/envoy/envoy-static-example-cookies.yaml
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_http
    address:
      socket_address: { address: 127.0.0.1, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
              path: /dev/stdout
              log_format:
                 text_format_source:
                   inline_string: '[%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%%PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS%"%UPSTREAM_TRANSPORT_FAILURE_REASON%"%BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%""%REQ(:AUTHORITY)%""%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS%%DOWNSTREAM [...]
          route_config:
            name: local_http_route
            virtual_hosts:
            - name: perf-test-hydra-http-1
              domains: ["perf-test-hydra-http-1"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: perf-test-hydra-http-1 }
          http_filters:
          - name: envoy.filters.http.stateful_session
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSession
              session_state:
                name: envoy.http.stateful_session.cookie
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
                  cookie:
                    name: global-session-cookie
                    ttl: 120s
          - name: envoy.filters.http.stateful_session
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSession
              session_state:
                name: envoy.http.stateful_session.header
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.http.stateful_session.header.v3.HeaderBasedSessionState
                  name: session-header
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  
  clusters:
  - name: perf-test-hydra-http-1
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: perf-test-hydra-http-1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3399 # CHANGE ME
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 12789 # CHANGE ME
